--- a/code/dev/parts/layout.html
+++ b/code/dev/parts/layout.html
@@ -111,7 +111,7 @@
             <i class="sub-menu-icon fa fa-exchange"></i> RTT Heatmaps
           </a>
           <a ui-sref-active="active" ui-sref="index.reports.imageengine-analytics" class="side-menu-sub-item">
-            <i class="sub-menu-icon fa fa-picture-o" aria-hidden="true"></i> ImageEngine
+            <i class="sub-menu-icon fa fa-picture-o" aria-hidden="true"></i> Image Optimization
           </a>
         </li>
         <!--Security Analytics -->
