--- a/code/dev/parts/reports/imageengine-analytics.tpl.html
+++ b/code/dev/parts/reports/imageengine-analytics.tpl.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-12">
-      <h2>ImageEngine Analytics</h2>
+      <h2>Image Optimization Analytics</h2>
     </div>
   </div>
 
