--- a/code/dev/parts/reports/imageengine-analytics/imageengine-chart-bytes-saved-percents.tpl.html
+++ b/code/dev/parts/reports/imageengine-analytics/imageengine-chart-bytes-saved-percents.tpl.html
@@ -1,5 +1,5 @@
 <div class="col-md-6">
-  <h3>Traffic Saved By ImageEngine</h3>
+  <h3>Traffic Saved By Image Optimization</h3>
   <!-- TODO: add individual filter logic-->
 <!--<div class="clearfix" filter-time-periods ng-disabled="!ngDomain" is-loading="_loading" fl-os="flOs" fl-country="flCountry"
   fl-device="flDevice" fl-browser="flBrowser" ng-filters="filters" on-filter="reload()"></div>-->
