--- a/code/dev/parts/dashboard/widgets/security-analytics/edit-config-security-analytics-waf.tpl.html
+++ b/code/dev/parts/dashboard/widgets/security-analytics/edit-config-security-analytics-waf.tpl.html
@@ -21,7 +21,7 @@
       </select>
     </div>
     <div class="form-group">
-      <input type="number" class="form-control fixed" ng-model="config.filters.rule_id" style="margin-bottom: 0px;" placeholder="Rule ID">
+      <input type="number" class="form-control fixed" ng-model="config.filters.rule_id" placeholder="Rule ID">
     </div>
 
     <div class="form-group">
