added 'Copyright' to singup page

--- a/code/dev/parts/signup/form-billing-plans.tpl.html
+++ b/code/dev/parts/signup/form-billing-plans.tpl.html
@@ -55,6 +55,7 @@
       <br>
       <div class="panel-footer row text-center">
         <p class="lead">Not sure which plan to choose? <a ng-href="{{vendorConfig.contactSalesLink}}" class="alert-link"><!-- <i class="glyphicon glyphicon-envelope"></i> -->Talk to an expert</a></p>
+        <p class="text-center">{{vendorConfig.copyright}}</p>
       </div>
     </div>
 
