--- a/code/dev/parts/dashboard/dashboard.tpl.html
+++ b/code/dev/parts/dashboard/dashboard.tpl.html
@@ -1,4 +1,4 @@
-<div class="row" ng-intro-autostart="!true" ng-intro-options="IntroOptions" ng-intro-method="introOpen" ng-intro-oncomplete="onIntroCompletedEvent" ng-intro-onexit="dashboard.onIntroSkipEvent" ng-intro-onchange="ChangeEvent" ng-intro-onbeforechange="dashboard.onBeforeChangeEvent" ng-intro-onafterchange="AfterChangeEvent">
+<div class="row" ng-intro-autostart="true" ng-intro-options="IntroOptions" ng-intro-method="introOpen" ng-intro-oncomplete="onIntroCompletedEvent" ng-intro-onexit="dashboard.onIntroSkipEvent" ng-intro-onchange="ChangeEvent" ng-intro-onbeforechange="dashboard.onBeforeChangeEvent" ng-intro-onafterchange="AfterChangeEvent">
   <div class="col-md-12" ng-if="dashboard.model && !dashboard._isLoading">
     <adf-dashboard name="{{dashboard.name}}" structure="dashboard.model.structure" adf-model="dashboard.model" />
   </div>
