--- a/code/dev/parts/dns_zone_records/new.html
+++ b/code/dev/parts/dns_zone_records/new.html
@@ -13,7 +13,7 @@
         <div class="row">
           <div class="col-sm-12">
             <div class="pull-left">
-              <a ui-sref="^" ng-disabled="_loading" class="btn btn-info">
+              <a ui-sref="^" ng-disabled="_loading" ng-click="storeToStorage(model)" class="btn btn-info">
                 <i class="glyphicon glyphicon-arrow-left"></i>&nbsp; Back To List
               </a>
             </div>
@@ -123,7 +123,7 @@
           </div>
           <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
-              <a ui-sref="^" class="btn btn-default">
+              <a ui-sref="^" class="btn btn-default" ng-click="clearForm()">
                 <i class="glyphicon glyphicon-remove"></i>&nbsp; Cancel
               </a>
               <button class="btn btn-success" ng-class="{'btn-disabled':isReadOnly()}" id="create_dns_zone_record" ng-disabled="createForm.$invalid|| _loading || isReadOnly()" ng-click="createDNSZoneRecord(model,false)">
