--- a/code/dev/parts/users/new.html
+++ b/code/dev/parts/users/new.html
@@ -197,7 +197,7 @@
           <hr>
           <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
-              <a ui-sref="{{state}}" class="btn btn-default">
+              <a ui-sref="{{state}}" class="btn btn-default" ng-click="clearForm()">
                <i class="glyphicon glyphicon-remove"></i>&nbsp; Cancel
               </a>
               <button class="btn btn-success" ng-class="{'btn-disabled':isReadOnly()}" id="create_user" ng-disabled="disableSubmit(model) || isReadOnly()" ng-click="createUser(model,false)">
