Dashboard action buttons aligned

--- a/code/dev/parts/dashboard/dashboard-title.tpl.html
+++ b/code/dev/parts/dashboard/dashboard-title.tpl.html
@@ -12,7 +12,7 @@
         </div>
       </div>
       <div class="pull-right">
-        <div class="form-group h4 ">
+        <div class="form-group h4 dashboard-actions">
           <a href="" ng-if="editMode" title="Add New Widget" class="btn btn-link" ng-click="addWidgetDialog()">
             <i class="glyphicon glyphicon-plus-sign"></i>
           </a>
