Fixed form bug on cancel click

--- a/code/dev/parts/dns_zones/new.html
+++ b/code/dev/parts/dns_zones/new.html
@@ -55,7 +55,7 @@
           <hr>
           <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
-              <a ui-sref="^" class="btn btn-default">
+              <a ui-sref="^" class="btn btn-default" ng-click="clearForm()">
                 <i class="glyphicon glyphicon-remove"></i>&nbsp; Cancel
               </a>
               <button class="btn btn-success" ng-class="{'btn-disabled':isReadOnly()}" id="create_dns_zone" ng-disabled="disableSubmit(model) ||createForm.$invalid || isReadOnly()" ng-click="createDNSZone(model,false)">
