--- a/code/dev/parts/domains/new.html
+++ b/code/dev/parts/domains/new.html
@@ -167,7 +167,7 @@ specify '11.11.11.11' in the origin server name field above and 'www.example.com
           <hr>
           <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
-              <a ui-sref="^" class="btn btn-default">
+              <a ui-sref="^" class="btn btn-default" ng-click="clearForm()">
                 <i class="glyphicon glyphicon-remove"></i>&nbsp;
                 Cancel
               </a>
