--- a/code/dev/parts/waf_rules/new.html
+++ b/code/dev/parts/waf_rules/new.html
@@ -121,7 +121,7 @@
           <hr>
           <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
-              <a ui-sref="^" class="btn btn-default">
+              <a ui-sref="^" class="btn btn-default" ng-click="clearForm()">
                 <i class="glyphicon glyphicon-remove"></i>&nbsp; Cancel
               </a>
               <button class="btn btn-success" id="create_waf_rule" ng-class="{'btn-disabled':isReadOnly()}" ng-disabled="disableSubmit(model) || isReadOnly()"
