Update Sign Up Page

--- a/code/dev/parts/signup/signup.html
+++ b/code/dev/parts/signup/signup.html
@@ -1,6 +1,6 @@
 <div id="top" class="my-page"></div>
 <div class="signup-wrapper">
-    <div class="signup-container">
+    <div class="signup-container container">
         <header>
             <div class="row">
                 <div class="col-sm-12">
