--- a/code/dev/parts/signup/form-short-and-full-signup.tpl.html
+++ b/code/dev/parts/signup/form-short-and-full-signup.tpl.html
@@ -73,7 +73,7 @@
           </div>
           <div class="form-action center-block">
             <div class="text-center">
-              <a ui-sref="^" class="btn btn-default">
+              <a ng-href="{{vendorConfig.sign_up_url}}" class="btn btn-default">
                 <i class="glyphicon glyphicon-arrow-left"></i>&nbsp; Back
               </a>
               <button class="btn btn-success" ng-disabled="$ctrl._loading || newUser.$invalid" ng-click="$ctrl.onSignUpShort($ctrl.model)">
@@ -296,7 +296,7 @@
                 </div>
                 <br>
                 <div class="text text-center">
-                  <a ui-sref="^" class="btn btn-default">
+                  <a ng-href="{{vendorConfig.sign_up_url}}" class="btn btn-default">
                     <i class="glyphicon glyphicon-arrow-left"></i>&nbsp; Back
                   </a>
                   <button class="btn btn-success" ng-disabled="_loading || newUser.$invalid ||(($ctrl.model.password != $ctrl.model.passwordConfirm ||newUser.passwordConfirm.$invalid) &&newUser.passwordConfirm.$dirty )"
