fix for tooltip in waf

--- a/code/dev/parts/domains/domain-waf-locations/domain-waf-locations.tpl.html
+++ b/code/dev/parts/domains/domain-waf-locations/domain-waf-locations.tpl.html
@@ -22,7 +22,7 @@
   </div>
   <div class="panel panel-body">
     <div class="form-group" ng-form="locationEditForm">
-      <div class="panel panel-default" title="{{item.location}}" ng-repeat="item in $ctrl.waf">
+      <div class="panel panel-default" ng-repeat="item in $ctrl.waf">
         <div class="panel-heading">
           <div class="domain-waf-location__info">
             <div class="pull-left panel-buttons-left">
