--- a/code/dev/parts/companies/account-resources.html
+++ b/code/dev/parts/companies/account-resources.html
@@ -13,7 +13,7 @@
           <div class="row">
             <div class="col-sm-12 form-inline">
               <div class="form-group">
-                <a ng-disabled="_loading" ui-sref="index.accountSettings.companies" class="btn btn-default">
+                <a ng-disabled="_loading" ng-click="onClickBack()" class="btn btn-default">
                   <i class="glyphicon glyphicon-arrow-left"></i>&nbsp; Back
                 </a>
               </div>
