--- a/code/dev/parts/dns_zones/list.html
+++ b/code/dev/parts/dns_zones/list.html
@@ -29,8 +29,7 @@
   <div class="row">
     <div class="col-sm-12">
       <h2 class="pull-left page-title">
-        <img class="ns1-logo--title" ng-src="images/ns1/white-pb-ns1.svg" alt="NS1 Logo">
-        DNS Zones List
+        <img class="ns1-logo--title" ng-src="images/ns1/white-pb-ns1.svg" alt="NS1 Logo"> DNS Zones List
       </h2>
     </div>
   </div>
@@ -59,7 +58,8 @@
         </div>
         <div class="panel-body">
           <div class="alert alert-info" ng-if="records.length == 0 && !_loading">
-            Currently you don't have any DNS zones registered in the system. You can click on "Add New DNS Zone" button above to add a DNS Zone.
+            Currently you don't have any DNS zones registered in the system. You can click on "Add New DNS Zone" button above to add
+            a DNS Zone.
           </div>
           <div class="alert alert-warning" ng-if="records == null && !_loading">
             Failed to retrieve a list of resources - please try again later
@@ -123,7 +123,10 @@
                   </a>
                 </td>
                 <td ng-if="auth.isReseller() ||  auth.isRevadmin()">
-                  <div>{{item.companyName}}</div>
+                  <a href="" ng-click="onGoToAccountInformation($event, item)" ng-if="!item.loading" tooltip-placement="left" tooltip-append-to-body="{{true}}"
+                    uib-tooltip="View Account Resources">
+                    <div>{{item.companyName}}</div>
+                  </a>
                 </td>
               </tr>
             </tbody>
