--- a/code/dev/parts/keys/list.html
+++ b/code/dev/parts/keys/list.html
@@ -39,12 +39,13 @@
         </div>
         <div class="panel-body">
           <div class="alert alert-info" ng-if="records.length == 0 && !_loading">
-            Currently you don't have any API keys registered in the system. You can click on "Add New API Key" button above to add an API key.
+            Currently you don't have any API keys registered in the system. You can click on "Add New API Key" button above to add an
+            API key.
           </div>
           <div class="alert alert-warning" ng-if="records == null && !_loading">
             Failed to retrieve a list of resources - please try again later
           </div>
-           <div class="alert alert-info" ng-if="_loading && filteredRecords.length === 0">
+          <div class="alert alert-info" ng-if="_loading && filteredRecords.length === 0">
             <i class="glyphicon glyphicon-refresh spin"></i>&nbsp; Loading...
           </div>
           <crud-pagination></crud-pagination>
@@ -87,9 +88,11 @@
                   </a>
                   </td>
                   <td>
-                    <button class="btn btn-primary" clipboard text="item.key" on-copied="copyCallback()" on-error="copyCallback(err)" style="vertical-align: initial;" uib-tooltip="Click to copy the key to the clipboard" tooltip-placement="top"><i class="fa fa-files-o"></i></button>
+                    <button class="btn btn-primary" clipboard text="item.key" on-copied="copyCallback()" on-error="copyCallback(err)" style="vertical-align: initial;"
+                      uib-tooltip="Click to copy the key to the clipboard" tooltip-placement="top"><i class="fa fa-files-o"></i></button>
                     <button class="btn btn-primary" ng-click="switchKeyVisibility(item)" ng-hide="item.showKey" style="vertical-align: initial;">Show API Key</button>
-                    <input ng-if="item.showKey" ng-blur="switchKeyVisibility(item)" class="form-control" value="{{item.key}}" style="width: 300px; display: inline-block; position: absolute; z-index: 999; margin-left: 4px;" focus-me="item.showKey">
+                    <input ng-if="item.showKey" ng-blur="switchKeyVisibility(item)" class="form-control" value="{{item.key}}" style="width: 300px; display: inline-block; position: absolute; z-index: 999; margin-left: 4px;"
+                      focus-me="item.showKey">
                   </td>
                   <td>{{ getRelativeDate(item.updated_at) }}</td>
                   <!--<td>-->
@@ -108,7 +111,10 @@
                     </a>
                   </td>
                   <td ng-if="auth.isReseller() ||  auth.isRevadmin()">
-                    <div class="company-name">{{item.companyName}}</div>
+                    <a href="" ng-click="onGoToAccountInformation($event, item)" ng-if="!item.loading" tooltip-placement="left" tooltip-append-to-body="{{true}}"
+                      uib-tooltip="View Account Resources">
+                      <div class="company-name">{{item.companyName}}</div>
+                    </a>
                   </td>
                 </tr>
                 <!--<tr class="disabled loading">-->
