--- a/code/dev/parts/waf-analytics/waf-events/waf-events.tpl.html
+++ b/code/dev/parts/waf-analytics/waf-events/waf-events.tpl.html
@@ -41,16 +41,16 @@
                 <tr>
                   <th></th>
                   <th><a href="" ng-click="vm.order('date')">Date/time</a>
-                  <span class="sortorder" ng-show="filter.predicate === 'date'" ng-class="{reverse: filter.reverse}"></span>
-                   </th>
+                    <span class="sortorder" ng-show="filter.predicate === 'date'" ng-class="{reverse: filter.reverse}"></span>
+                  </th>
                   <th><a href="" ng-click="vm.order('uri')">URL</a>
-                  <span class="sortorder" ng-show="filter.predicate === 'uri'" ng-class="{reverse: filter.reverse}"></span></th>
+                    <span class="sortorder" ng-show="filter.predicate === 'uri'" ng-class="{reverse: filter.reverse}"></span></th>
                   <th><a href="" ng-click="vm.order('ip')">IP address</a>
-                  <span class="sortorder" ng-show="filter.predicate === 'ip'" ng-class="{reverse: filter.reverse}"></span></th>
+                    <span class="sortorder" ng-show="filter.predicate === 'ip'" ng-class="{reverse: filter.reverse}"></span></th>
                   <th><a href="" ng-click="vm.order('zone')">Request Zone</a>
-                  <span class="sortorder" ng-show="filter.predicate === 'zone'" ng-class="{reverse: filter.reverse}"></span></th>
+                    <span class="sortorder" ng-show="filter.predicate === 'zone'" ng-class="{reverse: filter.reverse}"></span></th>
                   <th><a href="" ng-click="vm.order('id')">Triggered Rule Id</a>
-                  <span class="sortorder" ng-show="filter.predicate === 'id'" ng-class="{reverse: filter.reverse}"></span></th>
+                    <span class="sortorder" ng-show="filter.predicate === 'id'" ng-class="{reverse: filter.reverse}"></span></th>
                 </tr>
               </thead>
               <tbody>
@@ -67,14 +67,26 @@
                   <td>{{ item.uri }}</td>
                   <td>{{ item.ip }}</td>
                   <td>{{ item.zone }}</td>
-                  <td>{{ item.id }}</td>
+                  <td>{{ item.id }} ({{ getRuleDescription(item.id) }})</td>
                 </tr>
                 <tr ng-repeat-end id="events-{{$index}}" class="panel-collapse collapse" role="tabpanel">
                   <td colspan="6" style="background-color: #d0d0e0; padding-left: 25px;">
                     <div class="panel-body" style="padding: 10px; padding-bottom: 0;">
                       <!-- TODO: add details info-->
-                      <div> {{item.uri}} </div>
-                      <div> {{item.coords[0]}}:{{item.coords[1]}}</div>
+                      <div>Event Date/Time: {{ item.date }}</div>
+                      <div>URL: {{ item.uri }}</div>
+                      <div>End User IP: {{ item.ip }}</div>
+                      <div>End User Country: {{ item.country }}</div>
+                      <div>End User ISP/Organization: </div>
+                      <!-- TODO: Pull data from maxmind -->
+                      <div>Triggered Rule: {{ item.id }} ({{ getRuleDescription(item.id) }})</div>                      
+                      <div>Triggered Zone: {{ item.zone }}</div>
+                      <div>Variable Name: {{ item.var_name }}</div>
+                      <div>Blocked: {{ item.block === '1' ? 'Yes' : 'No'}}</div>
+                      <div>Learning Mode Enabled: {{ item.learning === '1' ? 'Yes' : 'No' }}</div>
+
+                      <!--<div> {{item.uri}} </div>
+                      <div> {{item.coords[0]}}:{{item.coords[1]}}</div>-->
                     </div>
                   </td>
                 </tr>
