Waf events info box padding fix

--- a/code/dev/parts/waf-analytics/waf-events/waf-events.tpl.html
+++ b/code/dev/parts/waf-analytics/waf-events/waf-events.tpl.html
@@ -71,7 +71,7 @@
                 </tr>
                 <tr ng-repeat-end id="events-{{$index}}" class="panel-collapse collapse" role="tabpanel">
                   <td colspan="6" style="background-color: #d0d0e0; padding-left: 25px;">
-                    <div class="panel-body" style="padding: 10px; padding-bottom: 0;">
+                    <div class="panel-body" style="padding: 10px;">
                       <!-- TODO: add details info-->
                       <div>Event Date/Time: {{ item.date }}</div>
                       <div>URL: {{ item.uri }}</div>
